@@ -175,6 +175,15 @@ class ShopItem(Categorizeable, ATCTContent):
     meta_type = "ShopItem"
     schema = ShopItemSchema
 
+    def SearchableText(self):
+        """ Make variations searchable. """
+        data = super(ShopItem, self).SearchableText()
+        return ' '.join([
+            data,
+            ' '.join(self.getVariation1_values()),
+            ' '.join(self.getVariation2_values())
+        ])
+
 
 def add_to_containing_category(context, event):
     """
