@@ -4,7 +4,8 @@ Changelog
 2.1.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Make variations searchable.
+  [lknoepfel]
 
 
 2.1.0 (2017-01-04)
